--- a/style.css
+++ b/style.css
@@ -9,34 +9,33 @@
   max-width: 1200px;
   margin: 0 auto;
 }
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Helvetica Neue", Arial, sans-serif;
-  font-size: 1.6rem;
-  line-height: 1.5;
+header {
   text-align: center;
-  color: #333;
-  margin: 0;
+  background-color: #eeeeee;
+  padding-top: 30px;
+  padding-bottom: 15px;
+}
+
+h1 {
+  background-color: orange;
+  margin-bottom: 15px;
+  font-size: 40px;
+}
+body {
+  background-color: #eeeeee;
+}
+
+main-box {
+  background-color: #eeeeee;
+  margin: 12px 5px;
+  border-radius: 5px;
 }
 
 #title {
   text-align: center;
 }
-
 p {
   text-align: center;
-}
-h1 {
-  font-size: 4rem;
-  margin-bottom: 0;
-}
-
-@media (max-width: 460px) {
-  h1 {
-    font-size: 3.5rem;
-    line-height: 1.2;
-  }
 }
 
 h2 {
@@ -49,19 +48,6 @@ a {
 
 a:visited {
   color: #74638f;
-}
-
-#main {
-  margin: 30px 8px;
-  padding: 15px;
-  border-radius: 5px;
-  background: #eee;
-}
-
-@media (max-width: 460px) {
-  #main {
-    margin: 0;
-  }
 }
 
 img {
@@ -81,12 +67,6 @@ img {
   margin: 15px 0 5px 0;
 }
 
-@media (max-width: 460px) {
-  #img-caption {
-    font-size: 1.4rem;
-  }
-}
-
 #headline {
   margin: 50px 0;
   text-align: center;
@@ -103,9 +83,15 @@ li {
   margin: 16px 0;
 }
 
-blockquote {
+.quote {
   font-style: italic;
+
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
   max-width: 545px;
-  margin: 0 auto 50px auto;
-  text-align: left;
+  text-align: center;
+}
+
+#link {
+  text-align: center;
 }
