set up bg col and wrapper

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
+.main-box {
   background-color: #eeeeee;
   margin: 12px 5px;
   border-radius: 5px;
